# S26_RobotProgramming_Crystal

./: README.md
Final_Code/: Basic_Motor_control.ipynb  Foward_and_back.ipynb  LED_bar.ipynb
Final_project/install/: local_setup.sh  setup.sh
Final_project/log/: latest_build
Final_project/src/fixed_camera/: package.xml  setup.py
Final_project/src/high_lvl_obj_detect/: package.xml  setup.cfg  setup.py
Final_project/src/low_lvl_obj_detect/: setup.cfg  setup.py
Final_project/src/path_planning/: package.xml  setup.py
Final_project/src/raspbot_drive_control/: package.xml  setup.cfg  setup.py
Final_project/src/raspbot_drive_control/raspbot_drive_control/: motor_test.py  object_drive_controller.py
lab2/: name.txt
lab2/Bryceland/: name.txt
lab2/Bryceland/lec2/: test_bash.sh
lab2/Carsto/: name.txt
lab2/Ebinger/: Task3_Explanation.txt
lab2/Ferrara/: name.txt
lab2/Ferrara/lec2/: test_bash.sh
lab2/Lizak/: name.txt
lab3/Bryceland/: Robot_Class.py
lab3/Carsto/Prelab/: lab3_prelab.py
lab3/Ebinger/: .pre_lab3.py.swp  Untitled.ipynb  pre_lab3.py  prelab3_tester.py
lab3/Ebinger/.ipynb_checkpoints/: pre_lab3-checkpoint.py  prelab3_tester-checkpoint.py
lab3/Ferrara/prelab/: rebot.py  robot.py  test_robot.py
lab3/lizak/PreLab/: Lab3_prelab.py  Test_Script.py
lab5/Ebinger/test_tf2_py/: package.xml  setup.py
lab5/Ebinger/time_tf2_py/: package.xml  setup.py
lab6/Bryceland/Prelab/: box.urdf
lab6/Carsto/prelab/: box.urdf
lab6/Ebinger/: box.urdf
lab6/Ferrara/prelab/: box.urdf  prelab_reflection.txt
lab6/Lizak/PreLab/: box.urdf
(+478 files in other folders)
